changed deprecated code, set encoding so eclipse doesn't bitch